<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lolli</string>
    <string name="title_section1">Widgets</string>
    <string name="title_section2">Cards</string>
    <string name="title_section3">RecyclerView</string>
    <string name="title_section4">Encryption</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="checker">Enable awesomeness</string>
    <string name="awesomeness">Enable awesomeness</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="hell_yeah">Launch activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Text</string>
    <string name="password">Password</string>
    <string name="salt">Salt</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="generate_salt">New Salt</string>
    <string name="output">Output</string>

    <string-array name="names">
        <item>Yadomi</item>
        <item>Menma</item>
        <item>Nagisa</item>
        <item>Tomoya</item>
        <item>Kyou</item>
        <item>Ryou</item>
        <item>Sunohara</item>
        <item>Kotomi</item>
        <item>Tomoyo</item>
        <item>Jinta</item>
        <item>Anaru</item>
        <item>Tsuruko</item>
        <item>Poppo</item>
        <item>Yukiatsu</item>
    </string-array>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
