<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.martin.lolli.WidgetFragment">

    <CheckBox
        android:id="@+id/cbAwesome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awesomeness" />

    <RadioGroup
        android:id="@+id/rgRadios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbAwesome">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />
    </RadioGroup>

    <Button
        android:id="@+id/bGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgRadios"
        android:text="@string/hell_yeah" />

    <RelativeLayout
        android:id="@+id/rlCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bGo"
        android:background="@android:color/darker_gray"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, it's me again.\nLift me up!" />
    </RelativeLayout>

</RelativeLayout>
