<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <EditText
            android:id="@+id/etText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvText"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:maxLines="4" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etText"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tvSalt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:text="@string/salt" />

        <EditText
            android:id="@+id/etSalt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSalt"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etSalt"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/bEncrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/encrypt" />

            <Button
                android:id="@+id/bDecrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decrypt" />

            <Button
                android:id="@+id/bSalt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_salt" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llButtons"
            android:text="@string/output" />

        <EditText
            android:id="@+id/etOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOutput"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:gravity="top"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="8"
            android:maxLines="8" />

    </RelativeLayout>

</ScrollView>